<resources>
    <string name="app_name">Book Lens</string>
    <string name="book_lens">Book Lens</string>
    <string name="tagline">𝘚𝘰 𝘮𝘢𝘯𝘺 𝘣𝘰𝘰𝘬𝘴, 𝘴𝘰 𝘭𝘪𝘵𝘵𝘭𝘦 𝘵𝘪𝘮𝘦</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="join_us">Join us</string>
    <string name="personal_ca">Personal cabinet</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forget Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or_sign_in">Or sign in with</string>
    <string name="have_account">Already have an account</string>
    <string name="or_sign_up">Or sign up with</string>
    <string name="c_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="snap">Snap</string>
    <string name="detect">Detect</string>
</resources>