<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    android:gravity="start|top"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <TextView
        android:id="@+id/personal_ca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/personal_ca"
        android:textAppearance="@style/personal_ca" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/lorem_ipsum"
        android:textAppearance="@style/lorem_ipsum" />
    <EditText
        android:hint="@string/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:layout_marginTop="35dp"
        android:paddingHorizontal="25dp"
        android:id="@+id/emailId"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="25dp"
        android:hint="@string/password"
        android:id="@+id/passId"/>
    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAlignment="textEnd"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forgot_pass"
        android:lineSpacingExtra="-2sp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:onClick="goMainPage"
        android:layout_gravity="center"
        android:background="@drawable/rectangle_btn"
        android:layout_marginTop="50dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textAppearance="@style/dont_have_account"/>
            <TextView
                android:layout_marginLeft="5dp"
                android:id="@+id/sign_up"
                android:onClick="goSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/purple_500"
                android:textAppearance="@style/dont_have_account"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"/>
        <TextView
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_in"
            android:textAppearance="@style/dont_have_account"/>
        <View
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_bg"
            android:src="@drawable/f"
            android:layout_marginRight="10dp"
            android:paddingVertical="5dp"
            android:paddingHorizontal="10dp"/>
        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google_plus"
            />


    </LinearLayout>
</LinearLayout>